# crayons

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
crayons/: __init__.py  file_import.py  propagation.py  system.py
crayons/catalogs/: .gitignore
crayons/materials/: __init__.py
crayons/surfaces/: __init__.py  bank.py  catalog.py
crayons/test/: test_glass.py  test_propagation.py  test_surfaces.py  test_system.py
crayons/util/: __init__.py
