[project]
name = "crayons"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Guillaume Allain", email = "13963457+GuillaumeAllain@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = ["numpy", "scipy", "tabulate", "matplotlib", "pyparsing"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
crayons = { path = ".", editable = true }

[tool.pixi.tasks]
